added border radius variable

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   --keypad-button-font-color: #fff;
   --keypad-button-font-family: Inter;
   --keypad-button-font-weight: 600;
+  --keypad-div-border-radius: 10px;
+  
   
 /* */
 
