--- a/style.css
+++ b/style.css
@@ -5,21 +5,17 @@
 }
 
 :root {
-  --screen-bg-color: #8AA5E4;
-  --keypad-div-bg-color: #1D2B57;
-  --keypad-button-bg-color: #323E63;
+  --calculator-bg-color: #8aa5e4;
+  --screen-bg-color: transparent;
+  --keypad-div-bg-color: #1d2b57;
+  --keypad-button-bg-color: #323e63;
   --keypad-button-font-size: 32px;
   --keypad-button-font-color: #fff;
   --keypad-button-font-family: Inter;
   --keypad-button-font-weight: 600;
-  --keypad-div-border-radius: 10px;
-  
-  
-/* */
+  --keypad-div-border-radius: 16px;
 
-
-
-
+  /* */
 }
 
 .responsive-container {
@@ -37,17 +33,21 @@
   width: 414px;
   height: 736px;
   /* border: 1px solid black; */
+  background-color: var(--calculator-bg-color);
 }
 
 .screen-div {
   height: 228px;
   width: 414px;
-  border: 1px solid blue;
-  background-color
+  /* border: 1px solid blue; */
+  background-color: var(--screen-bg-color);
 }
 
-.keypad {
+.keypad-div {
   height: 508px;
   width: 414px;
-  border: 1px solid green;
+  /* border: 1px solid green; */
+  background-color: var(--keypad-div-bg-color);
+  border-top-left-radius: var(--keypad-div-border-radius);
+  border-top-right-radius: var(--keypad-div-border-radius);
 }
