--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --keypad-button-font-family: Inter;
   --keypad-button-font-weight: 600;
   --keypad-div-border-radius: 16px;
+  --keypad-button-border-radius: 10px;
 
   /* */
 }
@@ -58,4 +59,13 @@
 .keypad-box {
   height: 438px;
   width: 340px;
+  display: grid;
+  grid-template-columns: repeat(4, 75px);
+  grid-template-rows: repeat(5, 75px);
+  gap: 13.33px;
+}
+
+.keypad-button {
+  background-color: var(--keypad-button-bg-color);
+  border-radius: var(--keypad-button-border-radius);
 }
