--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: ;
+  box-shadow: 10px 10px 4px 0px #323e6333;
 }
 
 .c {
