--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@
 .screen-div {
   height: 228px;
   width: 414px;
+  padding: 21.2px 39px 15px 24.21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* border: 1px solid blue; */
   background-color: var(--screen-bg-color);
 }
@@ -134,4 +138,45 @@
 .zero {
   grid-column-start: 1;
   grid-column-end: 3;
+}
+
+.screen {
+  border: 1px solid red;
+  width: 351px;
+  height: 206.8px;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.icons {
+  flex-direction: column;
+  align-items: flex-start;
+
+  width: 351px;
+  height: 52px;
+
+  border: 1px solid red;
+}
+
+.numbers {
+  flex-direction: column;
+  align-items: flex-end;
+  width: 351px;
+  height: 90px;
+  column-gap: 15px;
+  border: 1px solid red;
+}
+
+.status-bar {
+  width: 351px;
+  height: 12px;
+  background-image: url("img/status-bar.png");
+  margin-bottom: 15px;
+}
+.stopwatch {
+  height: 25px;
+  width: 25px;
+  background-image: url("img/stopwatch.png");
+  background-size: cover;
+  background-position: center;
 }
