--- a/style.css
+++ b/style.css
@@ -171,6 +171,11 @@ body {
   color: var(--keypad-button-font-color);
 }
 
+@media screen and (max-width: 299px) {
+  .calc-container {
+    transform: scale(0.5);
+  }
+}
 @media screen and (min-width: 300px) and (max-width: 700px) {
   .calc-container {
     transform: scale(0.65);
